[gd_scene load_steps=3 format=2]

[ext_resource path="res://Structures/DefenseStructure.gd" type="Script" id=1]
[ext_resource path="res://Overlap/DetectionZone.tscn" type="PackedScene" id=2]

[node name="DefenseStructure" type="StaticBody2D"]
collision_layer = 16
collision_mask = 0
script = ExtResource( 1 )

[node name="Base" type="Sprite" parent="."]

[node name="Body" type="Sprite" parent="."]

[node name="Muzzle" type="Position2D" parent="Body"]

[node name="Collider" type="CollisionShape2D" parent="."]

[node name="EnemyDetectionZone" parent="." instance=ExtResource( 2 )]
collision_mask = 2

[node name="AttackCooldown" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[editable path="EnemyDetectionZone"]
